# python-nix

./: README.md  flake.nix  pyproject.toml
examples/: example.py
src/: buildFFI.py
src/nix/: __init__.py  builtins.py  expr.py  store.py  support.py  util.py
test/: __init__.py  test_type_conversion.py
