[build-system]
requires = ["setuptools>=61.0", "cffi>=1.0.0", "pkgconfig>=1.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-nix"
version = "0.0.1"
authors = [
  { name="Matteo Fusi", email="fusiled@gmail.com" }
]
description = "Python bindings for Nix using CFFI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed"
]
optional-dependencies = {docs= ["sphinx"]}

[project.urls]
"Homepage" = "https://github.com/fusiled/python-nix"
"Bug Tracker" = "https://github.com/fusiled/python-nix/issues"
